[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tool-ai"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
pymongo = ">=4.12,<4.17"
langgraph-checkpoint-mongodb = "^0.4.0"
langchain = "^1.3.13"
langgraph = "^1.2.9"
langchain-community = "^0.4.2"
langchain-groq = "^1.1.3"
azure-identity = "^1.25.3"
azure-keyvault-secrets = "^4.11.0"
python-dotenv = "^1.2.2"
llama-index = "^0.14.23"
requests = "^2.34.2"
beautifulsoup4 = "^4.15.0"
geopy = "^2.4.1"
timezonefinder = "^8.2.4"
wikipedia = "^1.4.0"
pypdf = "^6.14.2"
streamlit = "^1.59.1"
langchain-tavily = "^0.2.18"
pytz = "^2026.2"
rapidfuzz = "^3.14.5"
pytest = "^9.1.1"
